Fix avatar height on mobile

--- a/static/index.css
+++ b/static/index.css
@@ -144,6 +144,7 @@ blockquote :first-child {
 
 #avatar img {
   width: 100%;
+  height: auto;
 }
 
 img.avatar-serious-business {
